// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option component should render isCheckbox - false 1`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    id="some-classname"
  />
</div>
`;

exports[`Option component should render isCheckbox - true 1`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    class="pf-c-check"
  >
    <input
      aria-invalid="false"
      class="pf-c-check__input"
      id="some-classname-checkbox"
      type="checkbox"
    />
  </div>
  <div
    id="some-classname"
  />
</div>
`;

exports[`Option component should render isFocused - false 1`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    id="some-classname"
  />
</div>
`;

exports[`Option component should render isFocused - true 1`] = `
<div
  class="ins-c-select__menu--option focused"
>
  <div
    id="some-classname"
  />
</div>
`;

exports[`Option component should render isSelected - false 1`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    id="some-classname"
  />
</div>
`;

exports[`Option component should render isSelected - true 1`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    id="some-classname"
  />
  <svg
    aria-hidden="true"
    fill="currentColor"
    height="1em"
    role="img"
    style="vertical-align:-0.125em"
    viewBox="0 0 512 512"
    width="1em"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      transform=""
    />
  </svg>
</div>
`;

exports[`Option component should render isSelected isCheckbox - false 1`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    id="some-classname"
  />
  <svg
    aria-hidden="true"
    fill="currentColor"
    height="1em"
    role="img"
    style="vertical-align:-0.125em"
    viewBox="0 0 512 512"
    width="1em"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      transform=""
    />
  </svg>
</div>
`;

exports[`Option component should render isSelected isCheckbox - false 2`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    id="some-classname"
  />
</div>
`;

exports[`Option component should render isSelected isCheckbox - true 1`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    class="pf-c-check"
  >
    <input
      aria-invalid="false"
      checked=""
      class="pf-c-check__input"
      id="some-classname-checkbox"
      type="checkbox"
    />
  </div>
  <div
    id="some-classname"
  />
</div>
`;

exports[`Option component should render isSelected isCheckbox - true 2`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    class="pf-c-check"
  >
    <input
      aria-invalid="false"
      checked=""
      class="pf-c-check__input"
      id="some-classname-checkbox"
      type="checkbox"
    />
  </div>
  <div
    id="some-classname"
  />
</div>
`;

exports[`Option component should render required props 1`] = `
<div
  class="ins-c-select__menu--option "
>
  <div
    id="some-classname"
  />
</div>
`;
